Fix overlaping divs

--- a/portfolio-frontend/src/components/projects_page/projectsPageMobile.scss
+++ b/portfolio-frontend/src/components/projects_page/projectsPageMobile.scss
@@ -9,7 +9,7 @@
 		}
 		.projects-page-data-right{
 			margin-left: 4em;
-			height: 37vh;
+			height: 58vh;
 			.project-image-gallery{
 				.square{
 					width: 400px;
@@ -30,7 +30,8 @@
 			font-size: 2em;
 		}
 		.projects-page-data-right{
-			margin-left: 0;
+      margin-left: 0;
+      height: 60vh;
 		}
 	}
 }
